feat: some domains can disabled

--- a/src/pages/content/ui/injected.css
+++ b/src/pages/content/ui/injected.css
@@ -1,60 +1,81 @@
 .canger-btn {
-    display: flex;
-    justify-content: center;
-    padding: 2px 2px;
-    width: 84px;
-    border-radius: 50px;
-    border: solid 1px #f3f4f6;
-    background-color: white;
-    text-align: center;
-    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.1);
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px 2px;
+  width: 56px;
+  border-radius: 50px;
+  border: solid 1px #f3f4f6;
+  background-color: white;
+  text-align: center;
+  box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.1);
+}
 
-  .canger-btn button {
-    position: relative;
-    width: 24px;
-    height: 24px;
-    border: none;
-    border-radius: 50%;
-    background-color: white;
-    margin: 0 2px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-  }
+.canger-btn button {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  border: none;
+  border-radius: 50%;
+  background-color: white;
+  margin: 0 2px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
 
-  .canger-btn button:hover {
-    background-color: #1f2937;
-    color: white;
-  }
+.canger-btn button:hover {
+  background-color: #1f2937;
+  color: white;
+}
 
-  .canger-btn button .tooltip {
-    visibility: hidden;
-    width: 80px;
-    background-color: #1f2937;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -41px;
-    margin-bottom: 6px;
-  }
+.canger-btn button .tooltip {
+  visibility: hidden;
+  width: 80px;
+  background-color: #1f2937;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -41px;
+  margin-bottom: 6px;
+}
 
-  .canger-btn button .tooltip::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: black transparent transparent transparent;
-  }
+.canger-btn button .tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
 
-  .canger-btn button:hover .tooltip {
-    visibility: visible;
+.canger-btn button:hover .tooltip {
+  visibility: visible;
+}
+/* loader spinner */
+.loader {
+  width: 18px;
+  height: 18px;
+  border: 3px dotted #1f2937;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 2s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
