fix: the button wrong place o-98

--- a/src/pages/content/ui/injected.css
+++ b/src/pages/content/ui/injected.css
@@ -17,6 +17,7 @@
   height: 24px;
   border: none;
   border-radius: 50%;
+  color: #1f2937;
   background-color: white;
   margin: 0 2px;
   text-align: center;
