--- a/src/pages/content/ui/injected.css
+++ b/src/pages/content/ui/injected.css
@@ -104,6 +104,7 @@ button:hover .tooltip {
   box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  color: #020617;
 }
 
 .word-panel .word-header {
