--- a/src/pages/content/ui/injected.css
+++ b/src/pages/content/ui/injected.css
@@ -31,7 +31,7 @@ button {
   height: 24px;
   border: none;
   border-radius: 50px;
-  color: #1e293b;
+  color: #6366f1;
   background-color: white;
   margin: 0 2px;
   text-align: center;
@@ -40,14 +40,14 @@ button {
 }
 
 button:hover {
-  background-color: #1e293b;
+  background-color: #6366f1;
   color: white;
 }
 
 .tooltip {
   visibility: hidden;
   width: 80px;
-  background-color: #1e293b;
+  background-color: #6366f1;
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -78,7 +78,7 @@ button:hover .tooltip {
 .loader {
   width: 18px;
   height: 18px;
-  border: 3px dotted #1e293b;
+  border: 3px dotted #6366f1;
   border-radius: 50%;
   display: inline-block;
   position: relative;
@@ -94,6 +94,8 @@ button:hover .tooltip {
     transform: rotate(360deg);
   }
 }
+
+/* Word translate panel */
 
 .word-panel {
   width: 280px;
@@ -137,10 +139,22 @@ button:hover .tooltip {
 }
 
 .word-panel .phonetic span :hover {
-  color: #0f172a;
+  color: #6366f1;
 }
 
 .word-highlight {
   text-decoration-line: underline;
   text-decoration-color: #ef4444;
+}
+
+/* Sentence translate panel */
+
+.sentence-panel {
+  max-width: 600px;
+  color: #020617;
+  padding: 12px;
+  border-radius: 12px;
+  border: solid 1px #f3f4f6;
+  background-color: white;
+  box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.1);
 }
