feat: 修复展示密度的问题

--- a/src/pages/content/ui/injected.css
+++ b/src/pages/content/ui/injected.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   padding: 2px 2px;
-  width: 56px;
+  width: 26px;
+  height: 26px;
   border-radius: 50px;
   border: solid 1px #f3f4f6;
   background-color: white;
